--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "resolutions": {
+    "csstype": "3.0.10"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@loadable/component": "^5.15.2",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +22,7 @@
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
